# DialogDetective

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
docs/pages/: config.yaml  imprint.html  index.html  theme.css
docs/pages/assets/: demo.webm
docs/pages/sections/: footer.html  hero.html  highlights.html  quick-start.html
docs/pages/styles/: components.css  layout.css  theme.css
docs/vhs/: README.md  demo.tape  mock_dialog_detective.sh  record.sh
src/: audio_extraction.rs  cache.rs  file_operations.rs  file_resolver.rs  lib.rs  main.rs  metadata_retrieval.rs  model_downloader.rs  speech_to_text.rs  temp.rs
src/ai_matcher/: claude_code.rs  gemini_cli.rs  mod.rs
src/metadata_retrieval/: cached.rs  mod.rs  tvmaze.rs  tvmaze_types.rs
