[package]
name = "dialog_detective"
version = "0.1.0"
edition = "2024"
authors = ["Jakob Westhoff"]
description = "Automatically identify and rename unknown video files by analyzing their audio content"
license = "MIT"

# This crate provides both a library and a binary
# Library: src/lib.rs - core functionality
# Binary: src/main.rs - CLI interface

[dependencies]
ffmpeg-sidecar = "2.2.0"
hound = "3.5.1"
infer = "0.19.0"
nanohtml2text = "0.2.1"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
ulid = "1.2.1"

# Whisper speech-to-text with GPU acceleration
# Currently using 'metal' feature for macOS GPU support (Apple Metal framework)
# For cross-platform builds, consider using target-specific features:
#   - macOS: features = ["metal"]
#   - Linux/Windows with NVIDIA: features = ["cuda"]
#   - Linux/Windows (generic): features = ["vulkan"]
#   - AMD GPUs: features = ["hipblas"]
# See: https://codeberg.org/tazz4843/whisper-rs#features
whisper-rs = { version = "0.15.1", features = ["metal"] }
