[package]
name = "dialog_detective"
version = "2.0.0"
edition = "2024"
authors = ["Jakob Westhoff"]
description = "Automatically identify and rename unknown tv series video files by letting AI listen to their dialogue."
license = "MIT"
repository = "https://github.com/jakobwesthoff/DialogDetective"
homepage = "https://dialogdetective.westhoffswelt.de"

# This crate provides both a library and a binary
# Library: src/lib.rs - core functionality
# Binary: src/main.rs - CLI interface

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = 3     # "s" prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.

[dependencies]
blake3 = { version = "1.8.2", features = ["mmap", "rayon"] }
clap = { version = "4.5.48", features = ["derive"] }
dialoguer = "0.12.0"
directories = "6.0.0"
ffmpeg-sidecar = "2.2.0"
hound = "3.5.1"
humansize = "2.1.3"
infer = "0.19.0"
nanohtml2text = "0.2.1"
reqwest = { version = "0.12.23", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
ulid = "1.2.1"

# Whisper speech-to-text with GPU acceleration
# GPU features are target-specific:
#   - macOS: Metal (Apple GPU framework) - enabled by default
#   - Linux/Windows: CPU-only by default, enable GPU with --features cuda/vulkan/hipblas
# See: https://codeberg.org/tazz4843/whisper-rs#features

[features]
default = []
cuda = ["whisper-rs/cuda"]
vulkan = ["whisper-rs/vulkan"]
hipblas = ["whisper-rs/hipblas"]

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.15.1", features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
whisper-rs = { version = "0.15.1" }
